[workspace]

members = ["projects/*"]
default-members = [
    "projects/jss-cli",
    "projects/jss-core",
    "projects/jss-error",
    "projects/jss-from",
    "projects/jss-into",
    "projects/jss-wasm",
]
exclude = [
    "projects/node-test",
]

[profile.release]
lto = true
opt-level = "s"

[workspace.metadata.release]
push = false
tag = false