[package]
name = "json-value"
version = "0.3.3"
authors = ["Aster <192607617@qq.com>"]
description = "Helper method to get the json value"
repository = "https://github.com/voml/jss/tree/master/projects/json-value"
documentation = "https://docs.rs/json-value"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.139"
serde_json = "1.0.82"

[features]
default = ["preserve_order"]
preserve_order = ["serde_json/preserve_order"]