[package]
name = "jss-cli"
version = "1.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Pseudo-Chinese lorem ipsum generator"
repository = "https://github.com/notedge/panduck/tree/master/projects/lipsum-cn"
documentation = "https://docs.rs/lipsum-cn"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.clap]
version = "3.2.12"
features = ["derive"]