[package]
name = "jss-convert"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Pseudo-Chinese lorem ipsum generator"
repository = "https://github.com/notedge/panduck/tree/master/projects/lipsum-cn"
documentation = "https://docs.rs/lipsum-cn"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
jsonschema = "0.13.3"
# serde_json = "1.0.74"
json-value = {version = "0.3", path = "../json-value"}
jss-error = {version = "1.0", path = "../jss-error"}
indexmap = "1.8.0"
