[package]
name = "jss-core"
version = "1.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Pseudo-Chinese lorem ipsum generator"
repository = "https://github.com/notedge/panduck/tree/master/projects/lipsum-cn"
documentation = "https://docs.rs/lipsum-cn"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
jsonschema = "0.16.0"
serde_json = "1.0.82"
indexmap = "1.9.1"
json-value = {version = "0.3.0", path = "../json-value"}
text-utils = "0.4.3"

rand = { version = "0.8.4", features = ["small_rng"] }
dynfmt = { version = "0.1.5", features = ["curly"] }
