[package]
name = "jss-core"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Pseudo-Chinese lorem ipsum generator"
repository = "https://github.com/notedge/panduck/tree/master/projects/lipsum-cn"
documentation = "https://docs.rs/lipsum-cn"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
indexmap = "1.9.1"
json-value = { version = "0.3.1", path = "../json-value" }
text-utils = "0.4.3"
jss-pest = { version = "0.4.1", path = "../jss-pest" }
rand = { version = "0.8.4", features = ["small_rng"] }

# wasm
getrandom = { version = "0.2.7", optional = true }
js-sys = { version = "0.3.58", optional = true }
serde-wasm-bindgen = { version = "0.4.3", optional = true }
wasm-bindgen = { version = "0.2.81", optional = true }

[dependencies.jsonschema]
version = "0.16.0"
default-features = false
features = ["draft202012"]

[features]
default = []
wasm = [
    "getrandom",
    "getrandom/js",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen"
]