[package]
name = "jss-core"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Json Simplified Schema Core Interface"
repository = "https://github.com/voml/jss"
documentation = "https://docs.rs/jss-core"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
indexmap = "1.9.1"
json-value = { version = "0.3.1", path = "../json-value" }
text-utils = "0.4.3"
jss-pest = { version = "0.4.2", path = "../jss-pest" }
rand = { version = "0.8.5", features = ["small_rng"] }

# wasm
getrandom = { version = "0.2.7", optional = true }
js-sys = { version = "0.3.58", optional = true }
serde-wasm-bindgen = { version = "0.4.3", optional = true }
wasm-bindgen = { version = "0.2.81", optional = true }

[dependencies.jsonschema]
version = "0.16.0"
default-features = false
features = ["draft202012"]

[features]
default = []
wasm = [
    "getrandom",
    "getrandom/js",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen"
]
