[package]
name = "jss-pest"
version = "0.4.2"
authors = ["Aster <galaster@foxmail.com>"]
description = "Json Simplified Schema parser via pest"
license = "MPL-2.0"
readme = "../../readme.md"
repository = "https://github.com/voml/jss"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
pest = "2.1.3"

[dev-dependencies]
pest_generator = "2.1.3"
quote = "1.0.20"
