[package]
publish = false
name = "jss-wasmbind"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Json Schema Swagger Wasm"
repository = "https://github.com/voml/jss-rs"
documentation = "https://docs.rs/jss-rs"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
js-sys = "0.3.36"
