[package]
publish = false
name = "jss-wasmbind"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
description = "Json Simplified Schema Wasm Interface"
repository = "https://github.com/voml/jss-rs"
documentation = "https://docs.rs/jss-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
jss-core = {version = "0.2.0", path = "../jss-core", features = ["wasm"] }
